# arvados_cwl_tester

./: .gitignore  .gitlab-ci.yml  README.adoc  README.md  _version.py  example_pipeline.cwl  example_usage.py  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup.sh  setup_old.py  test_tools.py  tools.py  tools.sh
arvados_cwltest/: cwl_runner.py  helpers.py  test_arvados_cwltest.py
arvados_cwltest/arvados_connection/: __init__.py  client.py  utils.py
biocwl_test/: cwl_runner.py  helpers.py  tools.py
biocwltest/: __init__.py  arvados_client.py  basic.py  basic_tests.py  check_outputs.py  cwl_runner.py  helpers.py  synchronize_test_data.py  test_biocwltest.py  test_tools.py
biocwltest/arvados_connection/: client.py  entities.py  exceptions.py  utils.py
components/single_step/: single_step.cwl
docker/single_step/: Dockerfile
src/arvados_cwl_tester/: __init__.py  arvados_utils.py  client.py  cwl_runner.py  entities.py  helpers.py
src/arvados_cwl_tester/arvados_connection/: client.py  utils.py
test/: test_arvados_cwl_tester.py  variables.json
test/cwl_workflows/: test_workflow.cwl
test/cwl_workflows/test_cat/: test_cat.cwl
test/cwl_workflows/test_single_step/: test_single_step.cwl
tests/: test_utils.py
tests/cwl_workflows/: test_workflow.cwl
